<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context="org.d3ifcool.addictcontrol.CreateProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/make_profile"
        android:textSize="20sp"
        android:textColor="#fff"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.8">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/avatar_satu" />

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_camera_alt_black_24dp"
                android:contentDescription="@string/image_button_description"
                android:onClick="changeAvatar" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_username"
            android:textColor="#fff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_edittext"
            android:hint="@string/hint_username"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="#fff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_edittext"
            android:hint="Password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jenis Akun"
            android:textColor="#fff"
            android:textSize="18sp" />


        <RadioGroup
            android:id="@+id/type_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/orangTua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Orang Tua"
                android:textColor="#fff" />


            <RadioButton
                android:id="@+id/anak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anak"
                android:textColor="#fff" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:background="#9e68ff"
        android:onClick="createProfile"
        android:text="@string/text_add_button"
        android:textColor="#fff"
        tools:ignore="RtlHardcoded" />

</LinearLayout>
