<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="org.d3ifcool.addictcontrol.AccountAcivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="245dp">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/avatar_satu"
                    android:id="@+id/avatar_image_view"/>

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/ic_camera_alt_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:onClick="changeAvatar"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/avatar_button_description" />


            </RelativeLayout>


        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/back_edittext">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/text_username"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_username"
                        android:textSize="24sp"
                        android:id="@+id/username_text_view"/>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_edittext">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap,UselessParent"
                    android:id="@+id/linearLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="password"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:id="@+id/quote_text_view"/>

                </LinearLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:onClick="editPassword"
                    android:text="@string/text_edit"
                    android:textColor="#ff902f"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_edittext">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap,UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="Tipe Akun"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:id="@+id/type_text_view"/>

                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="LogOut"
                    android:background="#ff593b"
                    android:textColor="#fff"
                    android:layout_marginTop="80dp"
                    android:onClick="LogOut"/>
            </RelativeLayout>



    </LinearLayout>


</ScrollView>
